# household-app-monorepo

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  households.py  kanban.py  routes.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  core.py
backend/app/schemas/: info.py
backend/app/services/: __init__.py  auth.py
docs/: github-issues.md  github-milestones.md  requirements.md
docs/architecture/: overview.md
docs/decisions/: 0001-monorepo-architecture.md
docs/issue-bodies/: auth-bootstrap.md  core-analyse.md  core-architektur.md  core-push.md  core-qr-invite.md  core-realtime.md  devops-backend.md  devops-ci.md  devops-deployment.md  devops-docker.md  devops-frontend.md  devops-monorepo.md  docs-readme.md  einkauf-listen.md  einkauf-verbrauch.md  kalender-haushaltsbezug.md  kalender-ical.md  kalender-termine.md  kanban-board-tasks.md  kanban-status-model.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: HouseholdsSection.jsx
frontend/src/pages/: Dashboard.jsx  HouseholdSettings.jsx  (+5 more)
infra/docker/: backend.Dockerfile  frontend.Dockerfile
supabase/: config.toml
supabase/migrations/: 20260403083901_create_core_tables.sql  20260412090000_create_household_invites.sql  20260412143000_add_households_created_by.sql  20260419120000_create_kanban_tasks.sql
