[project]
name = "household-app-backend"
version = "0.1.0"
description = "FastAPI-Grundgeruest fuer household-app-monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "httpx>=0.27.2,<1.0.0",
  "ruff>=0.7.3,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

